<?xml version="1.0"?>
<package format="2">
  <name>ark_msgs</name>
  <version>0.0.0</version>
  <description>
    ark_msgs defines messages for ARK.
  </description>

  <maintainer email="mpdmanash@gmail.com">Manash Pratim Das</maintainer>
  <author email="mpdmanash@gmail.com">Manash Pratim Das</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- XXX needed for users of mavlink_convert.h
  <build_export_depend>libmavconn</build_export_depend>
  -->

  <export>
    <architecture_independent/>
  </export>
</package>
